atout Faible Penetration, traductions

--- a/static/lang/fr.json
+++ b/static/lang/fr.json
@@ -72,6 +72,7 @@
     "WFRP4E.hitLocationTables.hitloc":"Standard",
     "WFRP4E.hitLocationTables.snake":"Serpent ou similaire",
     "WFRP4E.hitLocationTables.spider":"Araignée ou similaire",
+    "WFRP4E.hitLocationTables.horse":"Quadrupède",
     "WFRP4E.mutationTypes.mental":"Mental",
     "WFRP4E.mutationTypes.physical":"Physique",
     "WFRP4E.prayerTypes.blessing":"Bénédiction",
@@ -1229,16 +1230,20 @@
     "WFRP4E.ArmourType.Other" : "Autre",
     "WFRP4E.ArmourType.OtherMetal":"Autre (Métal)",
 
-    "WFRP4E.Availability.Common" : "Commun",
-    "WFRP4E.Availability.Scarce" : "Limité",
+    "WFRP4E.Availability.Anodin" : "Anodin",
+    "WFRP4E.Availability.Ordinaire" : "Ordinaire",
+    "WFRP4E.Availability.Frequent" : "Frequent",
+    "WFRP4E.Availability.Inhabituel" : "Inhabituel",
     "WFRP4E.Availability.Rare" : "Rare",
-    "WFRP4E.Availability.Exotic" : "Exotique",
+    "WFRP4E.Availability.Exceptionnel" : "Exceptionnel",
+    "WFRP4E.Availability.Mythique" : "Mythique",
 
     "MARKET.Village" : "Village",
     "MARKET.Town" : "Ville",
     "MARKET.City" : "Cité",
+    "MARKET.Capital" : "Capital",
     "MARKET.AvailabilityTest" : "Test de Disponibilité",
-    "MARKET.AvailWrongCommand": "Mauvais paramètres. Les paramètres attendus sont : <br>Taille [Village,Ville,Cité]<br>Rareté [Commun,Limité,Rare,Exotique]<br>(opt.) Modificateur de jet",
+    "MARKET.AvailWrongCommand": "Mauvais paramètres. Les paramètres attendus sont : <br>Taille [Village,Town,City,Capital]<br>Rareté [Anodin,Ordinaire,Frequent,Inhabituel,Rare,Exceptionnel,Mythique]<br>(opt.) Modificateur de jet",
     "MARKET.AvailCommandExample": "Exemple: /avail Village Rare 10",
     "MARKET.SettlementSize" : "Type d'endroit:",
     "MARKET.Rarity" : "Rareté:",
@@ -1248,26 +1253,26 @@
     "MARKET.SelectSettlementSize" : "Choisissez la taille de l'endroit:",
     "MARKET.PayForItem" : "Payer",
     "MARKET.Exchange" : "Optimiser (Moins de pièces possibles)",
-    "MARKET.Abbrev.GC" : "CO",
-    "MARKET.Abbrev.SS" : "PA",
-    "MARKET.Abbrev.BP" : "SC",
+    "MARKET.Abbrev.GC" : "r",
+    "MARKET.Abbrev.SS" : "d",
+    "MARKET.Abbrev.BP" : "p",
     "MARKET.PayCommand" : "Réponse de paiement",
     "MARKET.PayRequest" : "Demande de paiement",
     "MARKET.PaidBy" : "Payé par:",
     "MARKET.PayWrongCommand" : "Erreur de syntaxe. Merci de formater votre commande comme dans les exemples suivants:",
-    "MARKET.PayCommandExample" : "/pay 3co2sc<br>/pay 450sc<br>/pay 2pa12sc4co",
-    "MARKET.CantFindMoneyItems" : "Erreur. Impossible de trouver les pièces de monnaie (CO/PA/SC) dans l'inventaire du personnage.",
+    "MARKET.PayCommandExample" : "/pay 3r2p<br>/pay 450p<br>/pay 2d12p4r",
+    "MARKET.CantFindMoneyItems" : "Erreur. Impossible de trouver les pièces de monnaie (r/d/p) dans l'inventaire du personnage.",
     "MARKET.NotEnoughMoney" : "Ce personnage n'a pas assez d'argent pour payer la somme demandée<br>",
     "MARKET.MoneyNeeded" : "Argent requis:",
     "MARKET.MoneyAvailable": "Argent disponible:",
-    "MARKET.Paid": "<b>Paiement effectué:</b> {number1} CO {number2} PA {number3} SC",
+    "MARKET.Paid": "<b>Paiement effectué:</b> {number1} r {number2} d {number3} p",
     "MARKET.CreditCommand" : "Réponse d'envoi d'argent",
     "MARKET.CreditRequest" : "Envoi d'argent",
     "MARKET.CreditCommandNotAllowed" : "Les joueurs ne sont pas autorisés à utiliser cette commande, seulement le MJ.",
     "MARKET.ReceivedBy" : "Reçu par:",
     "MARKET.MoneyTransactionWrongCommand" : "Syntaxe erronée. Merci de formater votre commande comme l'un des exemples ci-dessous:",
-    "MARKET.CreditCommandExample" : "/credit 3co2pa<br>/credit 450sc each<br>/credit 2pa12sc4co split",
-    "MARKET.Credit": "<b>Envoi d'argent effectué:</b> {number1} Co {number2} Pa {number3} Sc",
+    "MARKET.CreditCommandExample" : "/credit 3r2d<br>/credit 450p each<br>/credit 2d12p4r split",
+    "MARKET.Credit": "<b>Envoi d'argent effectué:</b> {number1} r {number2} d {number3} p",
     "MARKET.RequestMessageForSplitCredit": "La somme d'argent {initialAmount} sera partagée entre le(s) {activePlayerNumber} joueur(s) actif(s), chaque joueur recevant:",
     "MARKET.RequestMessageForEachCredit": "La somme d'argent {initialAmount} sera donnée au(x) {activePlayerNumber} joueur(s) actif(s), chaque joueur recevant:",
     "MARKET.NoPlayers": "Aucun joueur actif dans cette session.",
@@ -1277,7 +1282,7 @@
     "MARKET.NotifyUserMustBePlayer": "Seul un joueur peut cliquer sur PAYER",
     "MARKET.NotifyNoActor": "Aucun acteur n'est selectionné ou associé avec l'utilisateur actuel",
     "MARKET.ItemAdded": "{item} ajouté à {actor}",
-    "MARKET.d":"d",
+    "MARKET.d":"p",
 
     "WFRP4E.TrappingType.Weapon" : "Arme",
     "WFRP4E.TrappingType.Armour" : "Armure",
@@ -1322,7 +1327,7 @@
     "WFRP4E.Conditions.Deafened" : "<p>Que ce soit à cause d'un bruit tonitruant ou d'un coup porté à la tête, vous ne parvenez plus à entendre correctement. Vous subissez une pénalité de -10 à tous les Tests impliquant l'audition, et tout adversaire qui vous attaque en combat rapproché par le flanc ou par derrière gagne un bonus supplémentaire de +10 pour vous toucher (ce bonus n'est pas augmenté avec de multiples États <em>Assourdi</em>). Un État <em>Assourdi</em> est retiré à la fin de chaque Round après le premier, souvent remplacé par un acouphène.</p>",
     "WFRP4E.Conditions.Entangled" : "<p>Vous êtes gêné par quelque chose qui restreint votre déplacement ; cela peut être des cordes, une toile d'araignée, ou les biceps protubérants d'un adversaire.</p><p>Au cours de votre tour, vous ne pouvez pas utiliser votre Mouvement, et toute Action qui implique un déplacement quelconque subit une pénalité de -10 (dont l'Empoignade ; voir page 163).</p><p>Vous pouvez utiliser votre Action pour retirer l'État <em>Empêtré</em> en réussissant un Test opposé <strong>de Force</strong> contre la source de cet empêtrement, et chaque DR obtenu permet de retirer un État <em>Empêtré</em> supplémentaire.</p>",
     "WFRP4E.Conditions.Fatigued" : "<p>Vous êtes épuisé, ou stressé, mais quoi qu'il en soit, vous avez besoin de repos.</p><p>Vous subissez une pénalité de -10 à tous vos Tests.</p><p>Pour retirer un État <em>Exténué</em>, il faut normalement du repos, un Sort ou un effet divin, mais, dans certaines conditions, par exemple lorsque l'État <em>Exténué</em> est dû à une charge portée trop importante (voir Encombrement, page 293), le fait de faire des modifications (comme porter moins de pièges, par exemple) peut permettre de retirer l'État.</p>",
-    "WFRP4E.Conditions.Poisoned" : "<p>Vous avez été <em>Empoisonné</em> ou un venin vous a été injecté. La difficulté de tous les Tests effectués pour éliminer le poison est dictée par le poison ou le venin en question.</p><p>À la fin de chaque round, perdez 1 Point de Blessure, en ignorant tous les modificateurs. De plus, vous subissez une pénalité de -10 à tous vos Tests.</p><p>Si vous atteignez 0 Point de Blessure alors que vous êtes <em>Empoisonné</em>, vous ne pouvez soigner aucune Blessure tant qu'il vous reste des États <em>Empoisonné</em>. Si vous tombez <em>@Condition[Inconscient]</em>  alors que vous êtes <em>Empoisonné</em>, effectuez un Test de Résistance après un nombre de Rounds équivalent à votre Bonus d'Endurance ou vous mourrez dans d'horribles souffrances. Voir Traumatisme page 172 pour en savoir plus.</p><p>À la fin de chaque Round, vous pouvez effectuer un test de Résistance. Sur un succès, retirez un État <em>Empoisonné</em>, et chaque DR permet d'en retirer un supplémentaire. Un Test de @Compendium[wfrp4e-core.items.HXZaV1CJhmTvcAz4] permet d'obtenir le même résultat.</p><p>Une fois débarassé de tous les États <em>Empoisonné</em>, gagnez 1 État <em>@Condition[Extenué]{Exténué}</em>.</p>",
+    "WFRP4E.Conditions.Poisoned" : "<p>Vous avez été <em>Empoisonné</em> ou un venin vous a été injecté. La difficulté de tous les Tests effectués pour éliminer le poison est dictée par le poison ou le venin en question.</p><p>À la fin de chaque round, perdez 1 Point de Blessure, en ignorant tous les modificateurs. De plus, vous subissez une pénalité de -5 à tous vos Tests.</p><p>Si vous atteignez 0 Point de Blessure alors que vous êtes <em>Empoisonné</em>, vous ne pouvez soigner aucune Blessure tant qu'il vous reste des États <em>Empoisonné</em>. Si vous tombez <em>@Condition[Inconscient]</em>  alors que vous êtes <em>Empoisonné</em>, effectuez un Test de Résistance après un nombre de Rounds équivalent à votre Bonus d'Endurance ou vous mourrez dans d'horribles souffrances. Voir Traumatisme page 172 pour en savoir plus.</p><p>À la fin de chaque Round, vous pouvez effectuer un test de Résistance. Sur un succès, retirez un État <em>Empoisonné</em>, et chaque DR permet d'en retirer un supplémentaire. Un Test de @Compendium[wfrp4e-core.items.HXZaV1CJhmTvcAz4] permet d'obtenir le même résultat.</p><p>Une fois débarassé de tous les États <em>Empoisonné</em>, gagnez 1 État <em>@Condition[Extenué]{Exténué}</em>.</p>",
     "WFRP4E.Conditions.Prone" : "<p>Vous vous retrouvez au sol, sans doute parce que vous n'avez plus de Points de Blessure disponibles, que vous avez chuté ou que vous avez été frappé par quelque chose de très gros.</p><p>Pendant votre tour, votre Mouvement ne peut être utilisé que pour vous relever ou encore ramper de la moitié de votre Mouvement en mètres (Note : s'il ne vous reste plus aucune Blessure, vous ne pouvez que ramper). Vous subissez une pénalité de -20 à tout Test qui implique un déplacement quelconque, et tout adversaire qui tente de vous attaquer en Combat au Corps à corps gagne un bonus de +20 pour vous toucher.</p><p>À l'inverse de la plupart des États, <em>À Terre</em> ne se cumule pas. Vous perdez l'État <em>À Terre</em> lorsque vous vous relevez.</p>",
     "WFRP4E.Conditions.Stunned" : "<p>Vous avez reçu un coup sur la tête, ou êtes désorienté ou confus ; vos oreilles bourdonnent et plus rien n'a vraiment de sens.</p><p> Vous êtes incapable d'effectuer votre Action au cours de votre tour et vous ne pouvez vous déplacer que de la moitié de votre Mouvement. Vous pouvez vous défendre lors des Tests opposés - mais pas ceux qui utilisent Langue (Magick). Vous subissez également une pénalité de -10 à tous les Tests, et tout adversaire qui tente de vous frapper en Combat au Corps à corps gagne +1 Avantage avant d'effectuer son attaque.</p><p>À la fin de chaque round, vous pouvez tenter un Test de <strong>Résistance Intermédiaire (+0)</strong>. Sur un succès, retirez 1 État <em>Sonné</em>, et chaque DR obtenu permet de retirer 1 État <em>Sonné</em> supplémentaire.</p><p>Une fois débarassé de tous les États <em>Sonné</em>, gagnez 1 État <em>@Condition[Extenué]{Exténué}</em> si vous n'en possédez pas déjà.</p>",
     "WFRP4E.Conditions.Surprised" : "<p>Vous avez été pris au dépourvu et vous n'êtes absolument pas prêt à réagir à ce qui arrive.</p><p>Vous ne pouvez effectuer ni votre Mouvement ni votre Action pendant ce tour et vous ne pouvez pas vous défendre lors de Tests opposés. Tout adversaire qui tente de vous frapper en Combat au Corps à corps gagne +20 à la CC.</p><p>L'État <em>Surpris</em> ne se cumule pas, et donc vous ne pouvez pas en subir plusieurs, même si, techniquement, vous pouvez être surpris plus d’une fois dans un même Round.</p><p>À la fin de chaque Round, ou après la première tentative effectuée pour vous toucher, vous perdez l'État <em>Surpris</em>.</p>",
@@ -1334,7 +1339,7 @@
     "WFRP4E.ConditionName.Ablaze" : "En Flammes",
     "WFRP4E.ConditionName.Bleeding" : "Hémorragique",
     "WFRP4E.ConditionName.Blinded" : "Aveuglé",
-    "WFRP4E.ConditionName.Broken" : "Brisé",
+    "WFRP4E.ConditionName.Broken" : "Paniqué",
     "WFRP4E.ConditionName.Deafened" : "Assourdi",
     "WFRP4E.ConditionName.Entangled" : "Empêtré",
     "WFRP4E.ConditionName.Fatigued" : "Extenué",
@@ -1346,6 +1351,9 @@
     "WFRP4E.ConditionName.Grappling" : "Empoigné",
     "WFRP4E.ConditionName.Fear" : "Peur",
     "WFRP4E.ConditionName.Defeated": "Vaincu",
+    "WFRP4E.ConditionName.Apeure" : "Apeuré",
+    "WFRP4E.ConditionName.Stresse" : "Stressé",
+    "WFRP4E.ConditionName.Demoralise" : "Démoralisé",
     
     "WFRP4E.SymptomDescriptions.Blight" :  "Vous êtes gravement malade et sans doute plus très loin des Portes de Morr car un poison mortel se répand dans votre corps.\n\nEffectuez un <b>Test de Résistance Très Facile (+60)</b> tous les jours (en général pendant votre sommeil) ou vous mourrez, peut-être dans votre sommeil, ou en délirant de fièvre, ou encore lors d'une atroce agonie. Si Toxine est indiqué (Modéré), le <b>Test est Facile (+40)</b>. Si elle est indiquée (Grave), le <b>Test est Accessible (+20)</b>.",
     "WFRP4E.SymptomDescriptions.Buboes" :  "Vous êtes victime d'une inflammation des ganglions lymphatiques de l'aîne, du cou ou des aisselles. Outre le fait que c'est extrêmement douloureux, cela peut causer des saignements ou des épanchements de pus. Leur aspect est dégoûtant, l'odeur répugnante et certains vont penser qu'il s'agit là de signes de faveurs de la part du Seigneur des Epidémies et vont supposer qu'ils renferment de minuscules démons en pleine croissance. Pour se défaire de ces horreurs et de ce qui peut s'y nicher, la pratique la plus courante consiste à les percer, même si cela aboutit souvent à une Blessure Purulente.\n\nSubissez une pénalité de –10 à tous vos Tests Physiques ainsi qu'à tous vos Tests de Sociabilité si ces bubons sont apparents (ou peuvent être sentis !).",
@@ -1631,38 +1639,38 @@
     "Willpower": "Force Mentale",
     "Fellowship": "Sociabilité",
  
-    "CHAR.WS": "Capacité de Combat",
-    "CHAR.BS": "Capacité de Tir",
+    "CHAR.WS": "Combat",
+    "CHAR.BS": "Précision",
     "CHAR.S": "Force",
     "CHAR.T": "Endurance",
     "CHAR.I": "Initiative",
     "CHAR.Ag": "Agilité",
     "CHAR.Dex": "Dexterité",
-    "CHAR.Int": "Intelligence",
-    "CHAR.WP": "Force Mentale",
-    "CHAR.Fel": "Sociabilité",
+    "CHAR.Int": "Intellect",
+    "CHAR.WP": "Sagesse",
+    "CHAR.Fel": "Éloquence",
 
     "CHARAbbrev.WS": "Com",
-    "CHARAbbrev.BS": "CT",
-    "CHARAbbrev.S": "F",
-    "CHARAbbrev.T": "E",
+    "CHARAbbrev.BS": "Pré",
+    "CHARAbbrev.S": "For",
+    "CHARAbbrev.T": "Endu",
     "CHARAbbrev.I": "I",
-    "CHARAbbrev.Ag": "Ag",
+    "CHARAbbrev.Ag": "Agi",
     "CHARAbbrev.Dex": "Dex",
     "CHARAbbrev.Int": "Int",
-    "CHARAbbrev.WP": "FM",
-    "CHARAbbrev.Fel": "Soc",
+    "CHARAbbrev.WP": "Sag",
+    "CHARAbbrev.Fel": "Élo",
     
-    "CHARBonus.WS": "Bonus de Capacité de Combat",
-    "CHARBonus.BS": "Bonus de Capacité de Tir",
+    "CHARBonus.WS": "Bonus de Combat",
+    "CHARBonus.BS": "Bonus de Précision",
     "CHARBonus.S": "Bonus de Force",
     "CHARBonus.T": "Bonus d'Endurance",
     "CHARBonus.I": "Bonus d'Initiative",
     "CHARBonus.Ag": "Bonus d'Agilité",
     "CHARBonus.Dex": "Bonus de Dextérité",
-    "CHARBonus.Int": "Bonus d'Intelligence",
-    "CHARBonus.WP": "Bonus de Force Mentale",
-    "CHARBonus.Fel": "Bonus de Sociabilité",
+    "CHARBonus.Int": "Bonus d'Intellect",
+    "CHARBonus.WP": "Bonus de Sagesse",
+    "CHARBonus.Fel": "Bonus d'Éloquence",
     "Bonus" : "Bonus",
     "NAME.Armour" : "Armure",
     "NAME.Hardy" : "Dur à cuire",
@@ -1735,6 +1743,9 @@
     "NAME.Trade":"Métier",
     "NAME.Arcane":"Arcane",
     "NAME.Lingering":"Persistant",
+
+    "NAME.Parade":"Parade",
+    "NAME.Esquive":"Esquive",
 
     "SPEC.Tiny" : "Minuscule",
     "SPEC.Little" : "Très petite",
@@ -1929,6 +1940,8 @@
     "PROPERTY.Lightweight": "Léger",
     "PROPERTY.Practical": "Pratique",
     "PROPERTY.Magical":"Magique",
+
+    "PROPERTY.tueur": "tueur",
 
     "PROPERTY.Sturdy": "Inusable",
     "PROPERTY.Slashing": "Tailladante",
@@ -2423,6 +2436,8 @@
     "Smell": "Odorat",
     "Hearing": "Ouie",
     "Touch": "Toucher", 
+
+    "BREAKDOWN.Faibledefense" : "Faible Défense - Rajoute {ignored} PA ({item})",
 
     "SOCKET.SendingSocketRequest":"Envoi d'une requête par Socket",
     "UpdaterTitle":"Mise à jour du contenu {title}"
